# buoy_retriever

./: README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/account/: apps.py  models.py
backend/buoy_retriever/: apps.py  auth.py  settings.py  signals.py  urls.py  views.py
backend/datasets/: api.py
backend/pipelines/: api.py  models.py
proxy/: Dockerfile  index.html
proxy/templates/: default.conf.template
